--- a/ViL.Api/appsettings.json
+++ b/ViL.Api/appsettings.json
@@ -12,5 +12,10 @@
   "AllowedHosts": "*",
   "JwtKey": "This is my ViLit Secret key for authentication",
   "JwtIssuer": "ViLit",
-  "JwtAudience": "KryEv1"
+  "JwtAudience": "KryEv1",
+  "Jwt": {
+    "Issuer": "http://localhost:10454",
+    "Audience": "http://localhost:10454",
+    "Key": "This is my ViLit Secret key for authentication"
+  }
 }
