--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,12 +24,16 @@
     "element-plus": "^2.3.9",
     "jest": "^29.6.2",
     "jest-editor-support": "^31.1.1",
+    "jsonwebtoken": "^9.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vuefire": "^3.1.17",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@types/node": "^20.12.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.1",
