--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Data
+/vietTTS/gta/
+/vietTTS/train_data/
+/vietTTS/test_data/
+/vietTTS/assets/infore
