--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,12 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@liripeng/vue-audio-player": "^1.5.2",
+    "@mahdikhashan/vue3-click-outside": "^0.1.2",
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.32.1",
     "dayjs": "^1.11.10",
-    "element-plus": "^2.3.9",
+    "element-plus": "^2.7.3",
     "jest": "^29.6.2",
     "jest-editor-support": "^31.1.1",
     "jsonwebtoken": "^9.0.2",
